# electronics

./: Cargo.toml  README.md  build-web.sh  notes.md
docs/: CNAME  flappy-bird.wasm  gl.js  index.html  simple_electronics.wasm
src/: components.rs  draw_sys.rs  main.rs  resources.rs  scripting.rs  svg.rs  systems.rs  ui.rs
src/components/: nodes.rs
src/systems/: cleanup_sys.rs  draw_systems.rs  place_node_sys.rs  place_wire_sys.rs  simulation_systems.rs  ui_systems.rs  update_current_scope_sys.rs
src/ui/: mouse_click.rs  top_panel.rs
svg_generation/: README.md  and.py  xor.py
test_scripts/: basic_circuit.rhai
web/: electrosim.wasm  flappy-bird.wasm  index.html
